# getpack

./: .gitignore  Dockerfile  LICENSE  README.md  setup.cfg
src/getpack/: __init__.py  executable.py  extraction.py  resource.py
src/redeploy/: LICENSE  __init__.py
tests/: conftest.py  test_common.py  test_concurrency.py  test_executable.py  test_unicode.py
