[metadata]
name = getpack
version = attr: getpack.__version__
author = Konstantin Maslyuk
author_email = Kostya.Maslyuk@gmail.com
description = Declarative external resources any with implicit deployment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kalemas/getpack
project_urls =
    Bug Tracker = https://github.com/kalemas/getpack/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir=
    =src
packages = find:
install_requires =
    six

[options.packages.find]
where=src

[options.extras_require]
dev =
  flake8
  flake8-import-order
  mypy
  pytest
  yapf

[flake8]
import-order-style = google
